# sdl_tutorial

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml
cmake/: FindSDL2_ttf.cmake
sdl_tutorial/: CMakeLists.txt
sdl_tutorial/src/: main.cpp
